KUBERNETES/ingress/canary/demo-1/01-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogging-v1
  labels:
    app: blogging
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogging
      version: v1
  template:
    metadata:
      labels:
        app: blogging
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        command: ["/bin/sh","-c"]
        args:
        - |
          echo "<h1>VERSION 1</h1>" > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'
