KUBERNETES/ingress/canary/demo-1/02-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogging-v1-svc
spec:
  selector:
    app: blogging
    version: v1
  ports:
  - port: 80
    targetPort: 80
