KUBERNETES/ingress/canary/demo-1/05-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogging-v2-svc
spec:
  selector:
    app: blogging
    version: v2
  ports:
  - port: 80
    targetPort: 80
